# RLRoboticAssembly-master

./: .gitignore  README.md  copy_to_rllib.py  demo_insert-1.py  envs_launcher.py  eval_results.json  fix_demo2.py  paper.tex  pyproject.toml  rollout.py  run.py  run_all_baselines.py  run_sac_dense_to_3cm.py  train.py  utilities.py
assembly_env/: __init__.py  base_task.py  sim_task.py
assembly_env/robots/: __init__.py  base.py  sim_panda.py  sim_robotless.py
configs/: assembly_ddpg.yaml  assembly_ppo.yaml  assembly_sac.yaml
copy_to_rllib/evaluation/: metrics.py
devices/: action.py  callbacks.py  device.py  pconnect.py  pdisconnect.py  pupdate.py
devices/devices/: nothing.py  pybulletgui.py  spacemouse.py  xboxcontroller.py
envs/: robot_real_example.py  robot_sim_robotless.py  task.py  task_real.py  task_sim.py
human_demo/: __init__.py  recorder.py
human_demo/devices/: __init__.py  base.py  gui.py  spacemouse.py  xbox.py
hyper_parameters/: assembly_apex_ddpg.yaml
imitation_pipeline/: __init__.py  run_pipeline.py  utils.py
imitation_pipeline/bc/: bc_policy.pt  model.py  train_bc.py
imitation_pipeline/reward_model/: model.py  reward_model.pt  (+1 more)
scripts/: __init__.py  augment_demo.py  cli.py  collect_demo_buffer.py  demo_auto_assembly.py  demo_auto_assembly_fast.py  demo_auto_assembly_simple.py  demo_grasp_and_lift.py  demo_grasp_and_lift_simple.py  demo_grasp_based_assembly.py  demo_grasp_simple.py  demo_insert-1.py  eval_all_baselines.py  play_agent.py  run_env.py  train_agent.py  train_baselines.py
utils/: __init__.py  io_utils.py  transforms.py
(+6 files in other folders)
